--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "~13.3.0",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "bootstrap": "^5.1.3",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
